# pdm2nix

./: .gitignore  404.html  FAQ.html  HACKING.html  Procfile  README.md  TODO.org  basic.html  flake.nix  introduction.html  print.html  searchindex.js  searchindex.json
doc/: book.toml  default.nix
doc/src/: HACKING.md  SUMMARY.md  basic.md  introduction.md
lib/: default.nix  editable.nix  lock.html  lock.nix  overlays.nix  test.nix  test_editable.nix  test_lock.nix  test_overlays.nix
lib/fixtures/kitchen-sink/a/: pyproject.toml
lib/fixtures/kitchen-sink/b/: pyproject.toml
lib/fixtures/trivial/: README.md  pyproject.toml
lib/fixtures/with-marker/: pyproject.toml
templates/app/: README.md  flake.nix  pyproject.toml
tests/: default.nix
tests/nested/: default.nix
tests/nested-poetry/: default.nix
tests/nested-poetry/b/: pyproject.toml
tests/nested-setuptools/: default.nix
tests/nested-setuptools/b/: default.nix  setup.py
tests/nested/a/: pyproject.toml
tests/nested/b/: pyproject.toml
tests/nested/c-editable/: pyproject.toml
tests/trivial/: default.nix  pyproject.toml
